examples/test/testpolicy2729.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2729
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key11: value35
      key9: value34
      key48: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value40
          key45: value48
          key19: value21
      podSelector:
        matchLabels:
          key43: value12
          key34: value24
          key32: value30
